--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div id="root"></div>
 
-    <script src="app.js"></script>
-    
+    <script src="./app.js" type="module"></script>
+
 </body>
 </html>
 
