--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="root"></div>
 
-    <script src="./app.js" type="module"></script>
+    <script src="./src/app.js" type="module"></script>
 
 </body>
 </html>
